layout issues

--- a/frontend/src/styles/message.css
+++ b/frontend/src/styles/message.css
@@ -62,7 +62,7 @@ div{
     top: 11.6935%;
     left: 5%;
     width: 90.2273% !important;
-    height: 80.0403% !important;
+    height: 77.1403% !important;
     max-height: none;
     max-width: none;
     resize: none;
@@ -74,6 +74,7 @@ div{
 .recipient_input, .messageTA, .sender_name {
     outline: 0;
     border: 0;
+    width: inherit;
     box-sizing: border-box;
     background-color: transparent;
     font-family: arial;
@@ -83,7 +84,7 @@ div{
 
 .recipient_div {
     position: absolute;
-    width: 56.8182%;
+    width: 70.8182% !important;
     height: 7.66129%;
     top: 2.82258%;
     left: 22.0455%;
@@ -119,7 +120,7 @@ div{
 
 .sender_div {
     position: absolute;
-    width: 56.8182%;
+    width: 94% !important;
     height: 7.66129%;
     top: 89.82258%;
     left: 5.0455%;
